// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App Snapshots > renders completed state correctly 1`] = `
<div
  class="sidebar"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot "
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <button
      aria-label="Settings"
      class="settings-btn "
      title="Settings"
    >
      <svg
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
      >
        <circle
          cx="12"
          cy="12"
          r="3"
        />
        <path
          d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
        />
      </svg>
    </button>
  </header>
  <section
    class="record-section"
  >
    <button
      class="record-button idle"
    >
      <span
        class="icon"
      />
      <span
        class="label"
      >
        Start
      </span>
    </button>
    <div
      class="timer "
    >
      00:00
    </div>
  </section>
  <section
    class="biomarkers-section"
  >
    <div
      aria-expanded="true"
      class="biomarkers-header"
      role="button"
      tabindex="0"
    >
      <div
        class="biomarkers-header-left"
      >
        <span
          class="chevron "
        >
          ▼
        </span>
        <span
          class="biomarkers-title"
        >
          Biomarkers
        </span>
      </div>
    </div>
    <div
      class="biomarkers-content"
    >
      <div
        class="biomarkers-placeholder"
      >
        Listening...
      </div>
    </div>
  </section>
  <section
    class="transcript-section"
  >
    <div
      class="transcript-header"
    >
      <div
        aria-expanded="true"
        class="transcript-header-left"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="chevron "
        >
          ▼
        </span>
        <span
          class="transcript-title"
        >
          Transcript
        </span>
      </div>
      <button
        class="copy-btn "
      >
        Copy
      </button>
    </div>
    <div
      class="transcript-content "
    >
      <div
        class="transcript-text"
      >
        <p>
          Final transcript text here.
        </p>
      </div>
    </div>
  </section>
  <div
    class="action-bar"
  >
    <button
      class="btn btn-primary"
    >
      New Session
    </button>
  </div>
</div>
`;

exports[`App Snapshots > renders error state correctly 1`] = `
<div
  class="sidebar"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot "
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <button
      aria-label="Settings"
      class="settings-btn "
      title="Settings"
    >
      <svg
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
      >
        <circle
          cx="12"
          cy="12"
          r="3"
        />
        <path
          d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
        />
      </svg>
    </button>
  </header>
  <div
    class="error-banner"
  >
    Microphone access denied
  </div>
  <section
    class="record-section"
  >
    <button
      class="record-button idle"
    >
      <span
        class="icon"
      />
      <span
        class="label"
      >
        Start
      </span>
    </button>
    <div
      class="timer "
    >
      00:00
    </div>
  </section>
  <section
    class="transcript-section"
  >
    <div
      class="transcript-header"
    >
      <div
        aria-expanded="true"
        class="transcript-header-left"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="chevron "
        >
          ▼
        </span>
        <span
          class="transcript-title"
        >
          Transcript
        </span>
      </div>
      <button
        class="copy-btn "
        disabled=""
      >
        Copy
      </button>
    </div>
    <div
      class="transcript-content "
    >
      <div
        class="transcript-placeholder"
      />
    </div>
  </section>
</div>
`;

exports[`App Snapshots > renders idle state correctly 1`] = `
<div
  class="sidebar"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot idle"
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <button
      aria-label="Settings"
      class="settings-btn "
      title="Settings"
    >
      <svg
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
      >
        <circle
          cx="12"
          cy="12"
          r="3"
        />
        <path
          d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
        />
      </svg>
    </button>
  </header>
  <section
    class="record-section"
  >
    <button
      class="record-button idle"
    >
      <span
        class="icon"
      />
      <span
        class="label"
      >
        Start
      </span>
    </button>
    <div
      class="timer "
    >
      00:00
    </div>
  </section>
  <section
    class="transcript-section"
  >
    <div
      class="transcript-header"
    >
      <div
        aria-expanded="true"
        class="transcript-header-left"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="chevron "
        >
          ▼
        </span>
        <span
          class="transcript-title"
        >
          Transcript
        </span>
      </div>
      <button
        class="copy-btn "
        disabled=""
      >
        Copy
      </button>
    </div>
    <div
      class="transcript-content "
    >
      <div
        class="transcript-placeholder"
      >
        Tap Start to begin
      </div>
    </div>
  </section>
</div>
`;

exports[`App Snapshots > renders model unavailable warning correctly 1`] = `
<div
  class="sidebar"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot idle"
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <button
      aria-label="Settings"
      class="settings-btn "
      title="Settings"
    >
      <svg
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
      >
        <circle
          cx="12"
          cy="12"
          r="3"
        />
        <path
          d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
        />
      </svg>
    </button>
  </header>
  <div
    class="warning-banner"
  >
    Model not found. Check settings.
  </div>
  <section
    class="record-section"
  >
    <button
      class="record-button idle"
      disabled=""
    >
      <span
        class="icon"
      />
      <span
        class="label"
      >
        Start
      </span>
    </button>
    <div
      class="timer "
    >
      00:00
    </div>
  </section>
  <section
    class="transcript-section"
  >
    <div
      class="transcript-header"
    >
      <div
        aria-expanded="true"
        class="transcript-header-left"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="chevron "
        >
          ▼
        </span>
        <span
          class="transcript-title"
        >
          Transcript
        </span>
      </div>
      <button
        class="copy-btn "
        disabled=""
      >
        Copy
      </button>
    </div>
    <div
      class="transcript-content "
    >
      <div
        class="transcript-placeholder"
      >
        Tap Start to begin
      </div>
    </div>
  </section>
</div>
`;

exports[`App Snapshots > renders recording state correctly 1`] = `
<div
  class="sidebar"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot recording"
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <button
      aria-label="Settings"
      class="settings-btn "
      disabled=""
      title="Settings disabled during recording"
    >
      <svg
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
      >
        <circle
          cx="12"
          cy="12"
          r="3"
        />
        <path
          d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
        />
      </svg>
    </button>
  </header>
  <section
    class="record-section"
  >
    <button
      class="record-button recording"
    >
      <span
        class="icon"
      />
      <span
        class="label"
      >
        Stop
      </span>
    </button>
    <div
      class="timer active"
    >
      00:00
    </div>
  </section>
  <section
    class="biomarkers-section"
  >
    <div
      aria-expanded="true"
      class="biomarkers-header"
      role="button"
      tabindex="0"
    >
      <div
        class="biomarkers-header-left"
      >
        <span
          class="chevron "
        >
          ▼
        </span>
        <span
          class="biomarkers-title"
        >
          Biomarkers
        </span>
      </div>
    </div>
    <div
      class="biomarkers-content"
    >
      <div
        class="biomarkers-placeholder"
      >
        Listening...
      </div>
    </div>
  </section>
  <section
    class="transcript-section"
  >
    <div
      class="transcript-header"
    >
      <div
        aria-expanded="true"
        class="transcript-header-left"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="chevron "
        >
          ▼
        </span>
        <span
          class="transcript-title"
        >
          Transcript
        </span>
      </div>
      <button
        class="copy-btn "
        disabled=""
      >
        Copy
      </button>
    </div>
    <div
      class="transcript-content "
    >
      <div
        class="transcript-placeholder"
      >
        Listening...
      </div>
    </div>
  </section>
</div>
`;

exports[`App Snapshots > renders stopping state correctly 1`] = `
<div
  class="sidebar"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot stopping"
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <button
      aria-label="Settings"
      class="settings-btn "
      disabled=""
      title="Settings disabled during recording"
    >
      <svg
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
      >
        <circle
          cx="12"
          cy="12"
          r="3"
        />
        <path
          d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
        />
      </svg>
    </button>
  </header>
  <section
    class="record-section"
  >
    <button
      class="record-button stopping"
      disabled=""
    >
      <span
        class="icon"
      />
      <span
        class="label"
      >
        ...
      </span>
    </button>
    <div
      class="timer active"
    >
      00:00
    </div>
  </section>
  <section
    class="transcript-section"
  >
    <div
      class="transcript-header"
    >
      <div
        aria-expanded="true"
        class="transcript-header-left"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="chevron "
        >
          ▼
        </span>
        <span
          class="transcript-title"
        >
          Transcript
        </span>
      </div>
      <button
        class="copy-btn "
        disabled=""
      >
        Copy
      </button>
    </div>
    <div
      class="transcript-content "
    >
      <div
        class="transcript-placeholder"
      >
        Processing...
      </div>
    </div>
  </section>
</div>
`;

exports[`App Snapshots > renders with transcript correctly 1`] = `
<div
  class="sidebar"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot recording"
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <button
      aria-label="Settings"
      class="settings-btn "
      disabled=""
      title="Settings disabled during recording"
    >
      <svg
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
      >
        <circle
          cx="12"
          cy="12"
          r="3"
        />
        <path
          d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
        />
      </svg>
    </button>
  </header>
  <section
    class="record-section"
  >
    <button
      class="record-button recording"
    >
      <span
        class="icon"
      />
      <span
        class="label"
      >
        Stop
      </span>
    </button>
    <div
      class="timer active"
    >
      00:00
    </div>
  </section>
  <section
    class="biomarkers-section"
  >
    <div
      aria-expanded="true"
      class="biomarkers-header"
      role="button"
      tabindex="0"
    >
      <div
        class="biomarkers-header-left"
      >
        <span
          class="chevron "
        >
          ▼
        </span>
        <span
          class="biomarkers-title"
        >
          Biomarkers
        </span>
      </div>
    </div>
    <div
      class="biomarkers-content"
    >
      <div
        class="biomarkers-placeholder"
      >
        Listening...
      </div>
    </div>
  </section>
  <section
    class="transcript-section"
  >
    <div
      class="transcript-header"
    >
      <div
        aria-expanded="true"
        class="transcript-header-left"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="chevron "
        >
          ▼
        </span>
        <span
          class="transcript-title"
        >
          Transcript
        </span>
      </div>
      <button
        class="copy-btn "
      >
        Copy
      </button>
    </div>
    <div
      class="transcript-content "
    >
      <div
        class="transcript-text"
      >
        <p>
          Hello, this is a test transcription.
        </p>
        <p>
          This is the second paragraph.
        </p>
        <p
          class="draft-text"
        >
          Still speaking...
        </p>
      </div>
    </div>
  </section>
</div>
`;
